feat(api): 판매글 판매 종료 기능 추가
